--- a/app/src/main/res/drawable/button_gradient.xml
+++ b/app/src/main/res/drawable/button_gradient.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:bottomRightRadius="8dp"
-        android:bottomLeftRadius="8dp"
-        android:topRightRadius="8dp"
-        android:topLeftRadius="8dp"/>
+    <corners android:radius="45dp" />
     <gradient
-        android:startColor="#0575E6"
-        android:endColor="#021B79"
+        android:startColor="#4E51D5"
+        android:endColor="#0078B8"
         android:angle="270"/>
 
 </shape>
