--- a/app/src/main/res/drawable/buttonstyle_square.xml
+++ b/app/src/main/res/drawable/buttonstyle_square.xml
@@ -5,5 +5,9 @@
         android:left="15dp"
         android:right="15dp"
         android:bottom="15dp" />
-    <corners android:radius="45dp" />
+    <corners
+        android:bottomLeftRadius="5dp"
+        android:bottomRightRadius="5dp"
+        android:topLeftRadius="5dp"
+        android:topRightRadius="5dp" />
 </shape>
